--- a/src/input.css
+++ b/src/input.css
@@ -5,8 +5,7 @@
 @tailwind utilities;
 
 @layer base {
-    p,h1,h2,h3,h4,h5,h6,
-    a {
+    p,h1,h2,h3,h4,h5,h6,button,a {
         font-family: 'Montserrat', sans-serif;
     }
     .nav-li {
@@ -67,5 +66,29 @@
     }
     .cart__btn {
         @apply w-[130px] h-[30px] bg-yellow-400 hover:bg-yellow-300;
+    }
+    .basket__product {
+        @apply relative hover:z-10 w-full py-2 lg:py-0 lg:h-[100px] bg-white border-b-2 border-white hover:border-yellow-400 flex flex-col space-y-4 lg:space-y-0 lg:flex-row  2xl:items-center px-5;
+    }
+    .basket__product__img {
+        @apply w-[90px] h-[90px];
+    }
+    .basket__product__name {
+        @apply text-2xl font-medium hover:underline;
+    }
+    .basket__product__desc {
+        @apply flex flex-col 2xl:flex-row  2xl:space-x-5;
+    }
+    .basket__product__form {
+        @apply w-full lg:w-auto flex flex-col md:flex-row space-y-3 items-center justify-between ml-auto space-x-1 lg:space-x-4;
+    }
+    .basket__product__btn1 {
+        @apply w-10 h-10 bg-white hover:bg-yellow-400 text-xl rounded-md hover:shadow-md active:shadow-none active:scale-95;
+    }
+    .basket__product__count {
+        @apply w-[50px] h-[50px] text-center outline-none border-2 border-gray-400 hover:border-gray-500 rounded-md focus:border-yellow-400;
+    }
+    .basket__product__price {
+        @apply text-2xl font-medium inline;
     }
 }
