--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1074,6 +1074,10 @@ p,h1,h2,h3,h4,h5,h6,button,a {
   }
 }
 
+.fixed{
+  position: fixed;
+}
+
 .absolute{
   position: absolute;
 }
@@ -1094,20 +1098,12 @@ p,h1,h2,h3,h4,h5,h6,button,a {
   left: -3.5rem;
 }
 
-.-left-3{
-  left: -0.75rem;
-}
-
-.-top-0{
-  top: -0px;
+.bottom-0{
+  bottom: 0px;
 }
 
 .-top-2{
   top: -0.5rem;
-}
-
-.-left-6{
-  left: -1.5rem;
 }
 
 .-left-8{
@@ -1116,10 +1112,6 @@ p,h1,h2,h3,h4,h5,h6,button,a {
 
 .-right-8{
   right: -2rem;
-}
-
-.bottom-0{
-  bottom: 0px;
 }
 
 .z-40{
@@ -1270,10 +1262,6 @@ p,h1,h2,h3,h4,h5,h6,button,a {
 
 .mt-auto{
   margin-top: auto;
-}
-
-.mt-16{
-  margin-top: 4rem;
 }
 
 .block{
@@ -1485,25 +1473,6 @@ p,h1,h2,h3,h4,h5,h6,button,a {
           animation: spin 1s linear infinite;
 }
 
-@-webkit-keyframes ping{
-  75%, 100%{
-    transform: scale(2);
-    opacity: 0;
-  }
-}
-
-@keyframes ping{
-  75%, 100%{
-    transform: scale(2);
-    opacity: 0;
-  }
-}
-
-.animate-ping{
-  -webkit-animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
-          animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
-}
-
 .cursor-pointer{
   cursor: pointer;
 }
@@ -1636,34 +1605,16 @@ p,h1,h2,h3,h4,h5,h6,button,a {
   margin-bottom: calc(15px * var(--tw-space-y-reverse));
 }
 
+.space-y-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
 .space-y-6 > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 0;
   margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
-}
-
-.space-x-8 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(2rem * var(--tw-space-x-reverse));
-  margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-y-8 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
-}
-
-.space-x-1 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.25rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-16 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(4rem * var(--tw-space-x-reverse));
-  margin-left: calc(4rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .overflow-hidden{
@@ -1678,12 +1629,12 @@ p,h1,h2,h3,h4,h5,h6,button,a {
   overflow-x: scroll;
 }
 
-.rounded-md{
-  border-radius: 0.375rem;
+.overflow-y-scroll{
+  overflow-y: scroll;
 }
 
-.rounded{
-  border-radius: 0.25rem;
+.rounded-md{
+  border-radius: 0.375rem;
 }
 
 .rounded-l-md{
@@ -1694,11 +1645,6 @@ p,h1,h2,h3,h4,h5,h6,button,a {
 .rounded-r-md{
   border-top-right-radius: 0.375rem;
   border-bottom-right-radius: 0.375rem;
-}
-
-.rounded-r{
-  border-top-right-radius: 0.25rem;
-  border-bottom-right-radius: 0.25rem;
 }
 
 .rounded-r-full{
@@ -1801,11 +1747,6 @@ p,h1,h2,h3,h4,h5,h6,button,a {
   background-color: rgb(226 226 226 / var(--tw-bg-opacity));
 }
 
-.bg-yellow-300{
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 191 45 / var(--tw-bg-opacity));
-}
-
 .bg-opacity-50{
   --tw-bg-opacity: 0.5;
 }
@@ -1895,6 +1836,16 @@ p,h1,h2,h3,h4,h5,h6,button,a {
   padding-bottom: 1.25rem;
 }
 
+.py-20{
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
+.py-16{
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
 .pt-8{
   padding-top: 2rem;
 }
@@ -1931,8 +1882,16 @@ p,h1,h2,h3,h4,h5,h6,button,a {
   padding-bottom: 1.25rem;
 }
 
+.pt-16{
+  padding-top: 4rem;
+}
+
 .text-center{
   text-align: center;
+}
+
+.text-right{
+  text-align: right;
 }
 
 .text-4xl{
@@ -2027,21 +1986,6 @@ p,h1,h2,h3,h4,h5,h6,button,a {
   color: rgb(220 38 38 / var(--tw-text-opacity));
 }
 
-.text-gray-200{
-  --tw-text-opacity: 1;
-  color: rgb(226 226 226 / var(--tw-text-opacity));
-}
-
-.text-gray-300{
-  --tw-text-opacity: 1;
-  color: rgb(203 203 203 / var(--tw-text-opacity));
-}
-
-.text-red-400{
-  --tw-text-opacity: 1;
-  color: rgb(248 113 113 / var(--tw-text-opacity));
-}
-
 .shadow-2xl{
   --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
   --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
@@ -2130,6 +2074,10 @@ p,h1,h2,h3,h4,h5,h6,button,a {
 .hover\:bg-yellow-400:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(253 184 25 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-opacity-30:hover{
+  --tw-bg-opacity: 0.3;
 }
 
 .hover\:font-semibold:hover{
@@ -2384,6 +2332,10 @@ p,h1,h2,h3,h4,h5,h6,button,a {
 }
 
 @media (min-width: 1024px){
+  .lg\:absolute{
+    position: absolute;
+  }
+
   .lg\:ml-3{
     margin-left: 0.75rem;
   }
@@ -2472,6 +2424,10 @@ p,h1,h2,h3,h4,h5,h6,button,a {
     flex-direction: row;
   }
 
+  .lg\:items-start{
+    align-items: flex-start;
+  }
+
   .lg\:items-center{
     align-items: center;
   }
@@ -2492,6 +2448,26 @@ p,h1,h2,h3,h4,h5,h6,button,a {
     --tw-space-x-reverse: 0;
     margin-right: calc(2.5rem * var(--tw-space-x-reverse));
     margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .lg\:space-x-16 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-x-reverse: 0;
+    margin-right: calc(4rem * var(--tw-space-x-reverse));
+    margin-left: calc(4rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .lg\:space-x-8 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-x-reverse: 0;
+    margin-right: calc(2rem * var(--tw-space-x-reverse));
+    margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .lg\:overflow-auto{
+    overflow: auto;
+  }
+
+  .lg\:p-8{
+    padding: 2rem;
   }
 
   .lg\:pt-10{
