--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1682,6 +1682,173 @@ p,
           background-clip: text;
 }
 
+.requers__cart{
+  display: flex;
+  flex-direction: column;
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+}
+
+.requers__cart > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
+.requers__cart{
+  border-bottom-width: 2px;
+  --tw-border-opacity: 1;
+  border-color: rgb(226 226 226 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  padding: 1.25rem;
+}
+
+.requers__cart:hover{
+  --tw-border-opacity: 1;
+  border-color: rgb(253 184 25 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 249 195 / var(--tw-bg-opacity));
+}
+
+@media (min-width: 768px){
+  .requers__cart{
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .requers__cart > :not([hidden]) ~ :not([hidden]){
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0px * var(--tw-space-y-reverse));
+  }
+
+  .requers__cart{
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+  }
+}
+
+.requers__cart__mobile{
+  min-width: 100px;
+  font-weight: 600;
+}
+
+@media (min-width: 768px){
+  .requers__cart__mobile{
+    display: none;
+  }
+}
+
+.requers__cart__id{
+  display: flex;
+}
+
+@media (min-width: 768px){
+  .requers__cart__id{
+    width: 8.333333%;
+  }
+}
+
+.requers__cart__name{
+  display: flex;
+}
+
+@media (min-width: 768px){
+  .requers__cart__name{
+    width: 25%;
+  }
+}
+
+.requers__cart__car{
+  display: flex;
+}
+
+@media (min-width: 768px){
+  .requers__cart__car{
+    width: 33.333333%;
+  }
+}
+
+.requers__cart__price{
+  display: flex;
+}
+
+@media (min-width: 768px){
+  .requers__cart__price{
+    width: 16.666667%;
+  }
+}
+
+.requers__cart__status{
+  display: flex;
+  width: 16.666667%;
+  align-items: center;
+}
+
+.requers__cart__ready{
+  display: flex;
+  height: 2.5rem;
+  width: 100%;
+  min-width: 150px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.375rem;
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+  --tw-gradient-from: #16a34a;
+  --tw-gradient-to: rgb(22 163 74 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  --tw-gradient-to: #22c55e;
+}
+
+@media (min-width: 768px){
+  .requers__cart__ready{
+    min-width: 0px;
+  }
+}
+
+.requers__cart__wait{
+  display: flex;
+  height: 2.5rem;
+  width: 100%;
+  min-width: 150px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.375rem;
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+  --tw-gradient-from: #ea580c;
+  --tw-gradient-to: rgb(234 88 12 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  --tw-gradient-to: #f97316;
+}
+
+@media (min-width: 768px){
+  .requers__cart__wait{
+    min-width: 0px;
+  }
+}
+
+.requers__cart__canceled{
+  display: flex;
+  height: 2.5rem;
+  width: 100%;
+  min-width: 150px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.375rem;
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+  --tw-gradient-from: #dc2626;
+  --tw-gradient-to: rgb(220 38 38 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  --tw-gradient-to: #ef4444;
+}
+
+@media (min-width: 768px){
+  .requers__cart__canceled{
+    min-width: 0px;
+  }
+}
+
 *, ::before, ::after{
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
@@ -2211,6 +2378,26 @@ p,
   width: 1.5rem;
 }
 
+.w-1\/12{
+  width: 8.333333%;
+}
+
+.w-1\/4{
+  width: 25%;
+}
+
+.w-1\/3{
+  width: 33.333333%;
+}
+
+.w-1\/6{
+  width: 16.666667%;
+}
+
+.w-2\/12{
+  width: 16.666667%;
+}
+
 .w-\[340px\]{
   width: 340px;
 }
@@ -2388,6 +2575,11 @@ p,
 
 .gap-0{
   gap: 0px;
+}
+
+.gap-x-4{
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
 }
 
 .space-y-1 > :not([hidden]) ~ :not([hidden]){
@@ -2584,11 +2776,6 @@ p,
   border-color: rgb(248 113 113 / var(--tw-border-opacity));
 }
 
-.bg-red-200{
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
-}
-
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -2653,16 +2840,16 @@ p,
   background-color: rgb(147 197 253 / var(--tw-bg-opacity));
 }
 
+.bg-opacity-70{
+  --tw-bg-opacity: 0.7;
+}
+
 .bg-opacity-50{
   --tw-bg-opacity: 0.5;
 }
 
 .bg-opacity-40{
   --tw-bg-opacity: 0.4;
-}
-
-.bg-opacity-70{
-  --tw-bg-opacity: 0.7;
 }
 
 .p-\[25px\]{
@@ -2923,24 +3110,6 @@ p,
 .shadow-lg{
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow{
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-md{
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-xl{
-  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
