--- a/src/input.css
+++ b/src/input.css
@@ -363,4 +363,37 @@
     .form__add div {
         @apply px-10 py-3 text-blue-800 hover:lightblue-text-gradient;
     }
+
+    .requers__cart {
+        @apply bg-white p-5 md:py-3 flex flex-col md:flex-row md:items-center border-b-2 border-gray-200 hover:bg-yellow-100 hover:border-yellow-400 gap-x-4 space-y-2 md:space-y-0;
+    }
+
+    .requers__cart__mobile {
+        @apply min-w-[100px] md:hidden font-semibold;
+    }
+    
+    .requers__cart__id {
+        @apply flex md:w-1/12;
+    }
+    .requers__cart__name {
+        @apply flex md:w-1/4;
+    }
+    .requers__cart__car {
+        @apply flex md:w-1/3;
+    }
+    .requers__cart__price {
+        @apply flex md:w-1/6;
+    }
+    .requers__cart__status {
+        @apply flex items-center w-2/12;
+    }
+    .requers__cart__ready {
+        @apply min-w-[150px] md:min-w-0 w-full h-10 flex items-center justify-center bg-gradient-to-r from-green-600 to-green-500 rounded-md;
+    }
+    .requers__cart__wait {
+        @apply min-w-[150px] md:min-w-0 w-full h-10 flex items-center justify-center bg-gradient-to-r from-orange-600 to-orange-500 rounded-md;
+    }
+    .requers__cart__canceled {
+        @apply min-w-[150px] md:min-w-0 w-full h-10 flex items-center justify-center bg-gradient-to-r from-red-600 to-red-500 rounded-md;
+    }
 }
