--- a/src/input.css
+++ b/src/input.css
@@ -449,6 +449,9 @@
     .catalog__part {
         @apply flex items-center pl-[10px] relative rounded-[5px] hover:bg-yellow-200 hover:bg-opacity-50 duration-100 gap-x-1
     }
+    .catalog__part__active {
+        @apply flex items-center pl-[10px] relative rounded-[5px] bg-yellow-200 bg-opacity-50 duration-100 gap-x-1
+    }
     .part__article {
         @apply w-1/3 font-medium text-sm 2xl:text-base
     }
@@ -481,5 +484,59 @@
     }
     .basket__btn {
         @apply w-10 h-10 bg-yellow-400 rounded-[5px] font-bold
+    }
+    .form-group {
+        @apply mt-4
+    }
+
+    .form-group__title {
+        @apply text-base font-semibold
+    }
+    #label-image {
+        @apply border-b-2 h-[50px] flex items-center justify-between px-5 text-gray-400 font-light hover:cursor-pointer hover:border-yellow-400 duration-200 text-base;
+    }
+    .form-group__input {
+        @apply w-full border-b-2 hover:border-yellow-400 bg-white h-[50px] px-5 placeholder:text-gray-400 text-base outline-none focus:border-yellow-400
+    }
+    .form-group__input__active {
+        @apply w-full border-b-2 border-emerald-500 bg-white h-[50px] px-5 placeholder:text-gray-400 text-base outline-none
+    }
+    .form-group__input__error {
+        @apply w-full border-b-2 border-red-500 text-red-500 bg-white h-[50px] px-5 placeholder:text-gray-400 text-base outline-none 
+    }
+    .blue-btn {
+        @apply w-[210px] h-10 rounded-[5px] lightblue-gradient overflow-hidden duration-200
+    }
+
+    .blue-btn div {
+        @apply w-full h-full flex items-center justify-center
+    }
+    
+    .blue-btn div p {
+        @apply text-base font-semibold text-blue-800
+    }
+    .blue-btn:hover div {
+        @apply bg-blue-800 duration-200;
+    }
+    .blue-btn:hover div p{
+        @apply lightblue-text-gradient duration-200;
+    }
+    .red-btn {
+        @apply w-[210px] h-10 rounded-[5px] hover:red-gradient overflow-hidden duration-200 
+    }
+    .red-btn div {
+        @apply w-full h-full flex items-center justify-center
+    }
+    .red-btn div p {
+        @apply red-text-gradient font-semibold
+    }
+    .red-btn:hover div p {
+        @apply text-white duration-200
+    }
+    .img-preview {
+        @apply flex w-[260px] h-[223px] items-center justify-center overflow-hidden border-2 border-yellow-400 bg-white
+    }
+    .img-preview img {
+        @apply max-w-full h-auto duration-1000
     }
 }
